# Command-line-Passphrase-Generator

./: .editorconfig  .gitignore  LICENSE  README.md  args.json  cmd.py  diceware-cmd.py  json_gen.py  main.py  pyproject.toml  requirements.txt
diceware/: die_roll.py  parse_wordlist.py
diceware/classes/: phrase.py  phrases.py  word.py
diceware/tests/: test_phrase.py  test_phrases.py  test_word.py
