[tool.poetry]
name = "command-line-passphrase-generator"
version = "0.1.0"
description = ""
authors = ["Robin Edmunds <8656189+robinedmunds@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
